@@ -9,6 +9,7 @@ Version 3.1.1 - SVN
  - Small documentation fixes.
  - Fix expected output for reboot test-source.
  - Don't shorten a team's hostname if it is an IP address.
+ - Add unique index on language extension, required for compile scripts.
 
 Version 3.1.0 - 14 July 2010
 ----------------------------
